add generated swagger models
