# api/models/action_post_body.go
@@ -1,0 +1,104 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ActionPostBody action post body
+//
+// swagger:model ActionPostBody
+type ActionPostBody map[string]ActionPostBodyAnon
+
+// Validate validates this action post body
+func (m ActionPostBody) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	for k := range m {
+
+		if swag.IsZero(m[k]) { // not required
+			continue
+		}
+		if val, ok := m[k]; ok {
+			if err := val.Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName(k)
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName(k)
+				}
+				return err
+			}
+		}
+
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// ContextValidate validate this action post body based on the context it is used
+func (m ActionPostBody) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	for k := range m {
+
+		if val, ok := m[k]; ok {
+			if err := val.ContextValidate(ctx, formats); err != nil {
+				return err
+			}
+		}
+
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// ActionPostBodyAnon Name of action to execute
+//
+// swagger:model ActionPostBodyAnon
+type ActionPostBodyAnon struct {
+
+	// input
+	Input map[string]string `json:"input,omitempty"`
+}
+
+// Validate validates this action post body anon
+func (m *ActionPostBodyAnon) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this action post body anon based on context it is used
+func (m *ActionPostBodyAnon) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ActionPostBodyAnon) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ActionPostBodyAnon) UnmarshalBinary(b []byte) error {
+	var res ActionPostBodyAnon
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
