# api/models/property_get_response.go
@@ -1,0 +1,27 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+)
+
+// PropertyGetResponse property get response
+//
+// swagger:model PropertyGetResponse
+type PropertyGetResponse map[string]string
+
+// Validate validates this property get response
+func (m PropertyGetResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this property get response based on context it is used
+func (m PropertyGetResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
